user-service/kubernetes/user-service-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: user-service-ingress
  labels:
    app: devsmd-user-service
  annotations:
    nginx.ingress.kubernetes.io/enable-cors: "true"
    nginx.ingress.kubernetes.io/cors-allow-methods: "PUT, GET, POST, OPTIONS"
    nginx.ingress.kubernetes.io/cors-allow-origin: "*"
    nginx.ingress.kubernetes.io/cors-allow-credentials: "true"
spec:
  rules:
    - host: devsmd-user-service.com
      http:
        paths:
          - backend:
              serviceName: devsmd-user-service
              servicePort: 8000
            path: /api
